# leptos-csr-preload

./: .gitignore  Cargo.toml
crates/leptos_csr_preload/: Cargo.toml  README.md
crates/leptos_csr_preload/src/: axum.rs  error.rs  html.rs  index.rs  lib.rs  manifest.rs  pattern.rs  registry.rs  tests.rs
crates/leptos_csr_preload/tests/: ui.rs
crates/leptos_csr_preload/tests/ui/: lazy_invalid_argument.rs  lazy_invalid_argument.stderr  lazy_invalid_preload_paths.rs  lazy_invalid_preload_paths.stderr  lazy_preload_conflict.rs  lazy_preload_conflict.stderr  lazy_route_async_view.rs  lazy_route_async_view.stderr  lazy_route_invalid_argument.rs  lazy_route_invalid_argument.stderr  lazy_route_missing_view.rs  lazy_route_missing_view.stderr
crates/leptos_csr_preload_macros/: Cargo.toml
crates/leptos_csr_preload_macros/src/: lib.rs
examples/axum-csr/: README.md
examples/axum-csr/app/: Cargo.toml  index.html
examples/axum-csr/app/src/: lib.rs  main.rs
examples/axum-csr/server/: Cargo.toml
examples/axum-csr/server/src/: main.rs
examples/axum-csr/server/tests/: end_to_end.rs
