[workspace]
members = [
    "crates/leptos_csr_preload",
    "crates/leptos_csr_preload_macros",
    "examples/axum-csr/app",
    "examples/axum-csr/server",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
axum = "0.8.4"
console_error_panic_hook = "0.1.7"
convert_case = "0.8.0"
inventory = "0.3.21"
leptos = { version = "0.8.17", features = ["csr"] }
leptos_router = "0.8.12"
proc-macro2 = "1.0.101"
quote = "1.0.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syn = { version = "2.0.106", features = ["full"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["fs", "macros", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs"] }
